# wav-files-vad-api

./: Cargo.toml  README.md
.github/workflows/: build-and-release.yml
src/: main.rs
