[package]
name = "wav-files-vad-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
hound = "3.5.1"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
ureq = { version = "3.1.2", features = ["json"] }
walkdir = "2.5.0"
